# AiProject

./: .gitignore  README.md  pyproject.toml
aiproject/: .gitignore  package-lock.json
backend/: app.py  main.py  model.py  pyproject.toml
backend/model/: main.ipynb
backend/templates/: index.html
frontend/: .gitignore  package-lock.json  package.json  proxy.js  vite.config.js
frontend/src/: App.css  App.jsx  BottomSidebar.css  BottomSidebar.jsx  LeftSidebar.css  LeftSidebar.jsx  NaverMap.jsx  Video.css  Video.jsx
frontend/src/assets/: emergency_voice_alert.m4a  suspicion_voice_alert.m4a
img/: 간단 구조도.drawio
