[tool.poetry]
name = "aiproject"
version = "0.1.0"
description = ""
authors = ["D0won <ldwlee03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
