[tool.poetry]
name = "2024-fastapi-study"
version = "0.1.0"
description = ""
authors = ["D0won <ldwlee03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
opencv-python = "^4.10.0.84"
jinja2 = "^3.1.4"
pyserial = "^3.5"
python-multipart = "^0.0.12"
torch = "^2.5.0"
torchvision = "^0.20.0"
pyfirmata = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
